--- a/index.html
+++ b/index.html
@@ -41,17 +41,22 @@
               </table>
              <hr>
            <h3>Skills</h3>
-				<table border="1", cellspacing="10">
+				<table cellspacing="10">
 					<tr>
-						<td>Python🌟🌟🌟🌟</td>
-						<td>SQL🌟🌟🌟🌟🌟</td>
+						<td>Python</td>
+						<td>🌟🌟🌟🌟🌟</td>
 					</tr>
 					<tr>
-						<td>Django🌟🌟🌟🌟</td>
-						<td>C🌟🌟🌟🌟</td>
+						<td>Django</td>
+						<td>🌟🌟🌟🌟</td>
 					</tr>
+					<tr>
+						<td>SQL</td>
+						<td>🌟🌟🌟🌟</td>
+					</tr>
+					
 				</table>   
        <a href="hobbies .html">My Hobbies</a>
-        <a href="Contact Me.html">Contact Us</a>                
+        <a href="Contact Me.html">Contact-Ms</a>                
 </body>
 </html>
