--- a/index.html
+++ b/index.html
@@ -57,6 +57,6 @@
 					
 				</table>   
        <a href="hobbies .html">My Hobbies</a>
-        <a href="Contact Me.html">Contact-Ms</a>                
+        <a href="Contact Me.html">Contact-Me</a>                
 </body>
 </html>
