--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <body>
     	<table cellspacing="20">
     		<tr>
-    			<td><img src="https://i.pinimg.com/originals/cc/99/71/cc99710d0e548529449653f4c7f077df.jpg" alt="not found"></td>
+    			<td><img src="QURAN.png" alt="quran verse"></td>
     			<td>  <h1><strong>Mohd Uzair</strong></h1> 
             <p><em>This is a paragraph.</em></p>
             <p>I am a student at G.L. Bajaj Group of Institutions.</p></td>
