--- a/index.html
+++ b/index.html
@@ -6,10 +6,8 @@
     </head>
     <body>
     	<table cellspacing="20">
-    		<tr>
-    			<td><img src="QURAN.png" alt="quran verse"/></td>
-    			<td>  <h1><strong>Mohd Uzair</strong></h1> 
-            <p><em>This is a paragraph.</em></p>
+    		<tr>
+    			<td>  <h1><strong>Mohd Uzair</strong></h1> 
             <p>I am a student at G.L. Bajaj Group of Institutions.</p></td>
     		</tr>
     	</table>
@@ -43,15 +41,15 @@
            <h3>Skills</h3>
 				<table cellspacing="10">
 					<tr>
-						<td>Python</td>
+						<td>HTML5</td>
 						<td>🌟🌟🌟🌟🌟</td>
 					</tr>
 					<tr>
-						<td>Django</td>
+						<td>CSS3</td>
 						<td>🌟🌟🌟🌟</td>
 					</tr>
 					<tr>
-						<td>SQL</td>
+						<td>Javascript</td>
 						<td>🌟🌟🌟🌟</td>
 					</tr>
 					
