Update hobbies .html

--- a/hobbies .html
+++ b/hobbies .html
@@ -6,7 +6,7 @@
      <body>
                <h3> My Hobbies </h3>
            <ol>  <!-- or <ol type="1"/"i"/"a"/"A"/"I" {<ol start="7"}-->
-           	<li><a href="https://quran.com/">Quran</a></li>
+           	<li><a href="https://athleanx.com/">Exercise</a></li>
                <li>Coding</li>
                <li>Sports</li>
            </ol>
